@@ -12,12 +12,14 @@ public class AccesoDB {
 	public static Connection getConnection() throws SQLException {
 		Connection cn = null;
 		String driver = "com.microsoft.sqlserver.jdbc.SQLServerDriver";
-		String urlDB = "jdbc:sqlserver://172.20.40.11\\SQLEXPRESS:1433;databaseName=VENTAS";
+		//String urlDB = "jdbc:sqlserver://localhost:1433;databaseName=VENTAS";
+                String urlDB = "jdbc:sqlserver://localhost:1433;databaseName=VENTA;encrypt=true;TrustServerCertificate=True;";
 		String user = "sa";
 		String pass = "sql";
 		try {
 			// Paso 1: Cargar el driver a memoria 
-			Class.forName(driver).newInstance();
+			//Class.forName(driver).newInstance();
+			Class.forName(driver).getDeclaredConstructor().newInstance();
 			// Paso 2: Obtener el objeto Connection 
 			cn = DriverManager.getConnection(urlDB, user, pass);
 		} catch (SQLException e) {
